--- a/fullstack-c3/module2/conFusion/app/dishdetail.html
+++ b/fullstack-c3/module2/conFusion/app/dishdetail.html
@@ -68,14 +68,14 @@
                     {{comment.name}}
                     {{comment.numberOfStars}}
                     {{comment.commentText}}
-                    {{comment.date | date}}
                 </ul>
             <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
-                <div class="form-group">
+                <div class="form-group" ng-class="{ 'has-error' : commentForm.name.$error.required && !commentForm.name.$pristine }">
                     <label for="name" class="col-sm-2 control-label">First Name</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="name" name="name" placeholder="Enter Your Name"
                         ng-model="comment.name" required>
+                        <span ng-show="commentForm.name.$error.required && !commentForm.name.$pristine" class="help-block">Your name is required.</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -100,16 +100,17 @@
                         </label>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" ng-class="{ 'has-error' : commentForm.comments.$error.required && !commentForm.comments.$pristine }">
                     <label for="feedback" class="col-sm-2 control-label">Your Comments</label>
                     <div class="col-sm-10">
                         <textarea class="form-control" rows="12" ng-model="comment.commentText" name="comments" required>
                         </textarea>
+                        <span ng-show="commentForm.comments.$error.required && !commentForm.comments.$pristine" class="help-block">Your comments are required.</span>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary" >Submit Comment</button>
+                        <button type="submit" class="btn btn-primary" ng-disabled="commentForm.$invalid">Submit Comment</button>
                     </div>
                 </div>
 
