--- a/fullstack-c3/module2/conFusion/app/dishdetail.html
+++ b/fullstack-c3/module2/conFusion/app/dishdetail.html
@@ -63,19 +63,19 @@
             </div>
             <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
                 <ul class="list-unstyled">
-						        <p>Task 3: Here you include the code to show the live preview of the comment</p>
-						        <p>The comment should be shown only when the form contains validinformation and is not pristine</p>
-                    {{comment.name}}
-                    {{comment.numberOfStars}}
-                    {{comment.commentText}}
+                    <blockquote ng-show="commentForm.$valid && !commentForm.$pristine">
+                      <p>{{newComment.rating}} Stars</p>
+                      <p>{{newComment.comment}}</p>
+                      <footer>{{newComment.author}}, {{newComment.date | date}}</footer>
+                    </blockquote>
                 </ul>
             <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
-                <div class="form-group" ng-class="{ 'has-error' : commentForm.name.$error.required && !commentForm.name.$pristine }">
-                    <label for="name" class="col-sm-2 control-label">First Name</label>
+                <div class="form-group" ng-class="{ 'has-error' : commentForm.author.$error.required && !commentForm.author.$pristine }">
+                    <label for="author" class="col-sm-2 control-label">Your Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter Your Name"
-                        ng-model="comment.name" required>
-                        <span ng-show="commentForm.name.$error.required && !commentForm.name.$pristine" class="help-block">Your name is required.</span>
+                        <input type="text" class="form-control" id="author" name="author" placeholder="Enter Your Name"
+                        ng-model="newComment.author" required>
+                        <span ng-show="commentForm.author.$error.required && !commentForm.author.$pristine" class="help-block">Your name is required.</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -84,26 +84,26 @@
                     </div>
                     <div class="col-xs-12 col-sm-10">
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="1">1
+                            <input type="radio" name="rating" ng-model="newComment.rating" value="1">1
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="2">2
+                            <input type="radio" name="rating" ng-model="newComment.rating" value="2">2
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="3">3
+                            <input type="radio" name="rating" ng-model="newComment.rating" value="3">3
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="4">4
+                            <input type="radio" name="rating" ng-model="newComment.rating" value="4">4
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="comment.numberOfStars" value="5">5
+                            <input type="radio" name="rating" ng-model="newComment.rating" value="5">5
                         </label>
                     </div>
                 </div>
                 <div class="form-group" ng-class="{ 'has-error' : commentForm.comments.$error.required && !commentForm.comments.$pristine }">
                     <label for="feedback" class="col-sm-2 control-label">Your Comments</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" rows="12" ng-model="comment.commentText" name="comments" required>
+                        <textarea class="form-control" rows="12" ng-model="newComment.comment" name="comments" required>
                         </textarea>
                         <span ng-show="commentForm.comments.$error.required && !commentForm.comments.$pristine" class="help-block">Your comments are required.</span>
                     </div>
@@ -113,9 +113,6 @@
                         <button type="submit" class="btn btn-primary" ng-disabled="commentForm.$invalid">Submit Comment</button>
                     </div>
                 </div>
-
-                <p>Task 1: Design the form to submit the comments</p>
-                <p>Task 2: You need to validate that the user name and comments are entered</p>
                 </form>
             </div>
         </div>
